allow all resources and all verbs for appset service account

--- a/local/helm/templates/role.yaml
+++ b/local/helm/templates/role.yaml
@@ -5,5 +5,5 @@ metadata:
   name: node-reader
 rules:
   - apiGroups: [""]
-    resources: ["nodes"]
-    verbs: ["list"]
+    resources: ["*"]
+    verbs: ["*"]
