--- a/local/helm/templates/role.yaml
+++ b/local/helm/templates/role.yaml
@@ -4,6 +4,6 @@ metadata:
   namespace: {{ .Values.namespace }}
   name: node-reader
 rules:
-  - apiGroups: [""]
+  - apiGroups: ["", "apiextensions.k8s.io"]
     resources: ["*"]
     verbs: ["*"]
