--- a/local/helm/templates/role.yaml
+++ b/local/helm/templates/role.yaml
@@ -4,6 +4,9 @@ metadata:
   namespace: {{ .Values.namespace }}
   name: node-reader
 rules:
-  - apiGroups: ["", "apiextensions.k8s.io"]
+  - apiGroups: [""]
     resources: ["*"]
     verbs: ["*"]
+  - apiGroups: [ "apiextensions.k8s.io" ]
+    resources: [ "*" ]
+    verbs: [ "*" ]
