--- a/local/helm/templates/role.yaml
+++ b/local/helm/templates/role.yaml
@@ -10,3 +10,6 @@ rules:
   - apiGroups: [ "apiextensions.k8s.io" ]
     resources: [ "*" ]
     verbs: [ "*" ]
+  - apiGroups: [ "argoproj.io" ]
+    resources: [ "*" ]
+    verbs: [ "*" ]
