--- a/local/helm/templates/role.yaml
+++ b/local/helm/templates/role.yaml
@@ -10,6 +10,6 @@ rules:
   - apiGroups: [ "apiextensions.k8s.io" ]
     resources: [ "*" ]
     verbs: [ "*" ]
-  - apiGroups: [ "argoproj.io" ]
+  - apiGroups: [ "*" ]
     resources: [ "*" ]
     verbs: [ "*" ]
